# dotfiles

./: .gitignore  .gitmux.conf  .p10k.zsh  .tmux.conf  .zsh_history_ignore  .zshrc  dark_colors.yaml  fzf-theme-dark.zsh  fzf-theme-light.zsh  get_distro_icon.sh  get_process_icon.sh  get_project_root.sh  install.sh  light-colors.zsh-theme  light_colors.yaml  symlink.sh  tmux-grid.sh
tui/: Cargo.toml
tui/src/: app.rs  config.rs  installer.rs  main.rs  status.rs  symlink.rs  ui.rs
